--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">CrudNote</a>
@@ -19,15 +19,15 @@
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
         <li class="nav-item">
-          <a id="buttonSignIn" class="btn btn-primary me-2" href="#">Sign In</a>
-          <a class="btn btn-light-custom" href="#">Register</a>
+          <a id="buttonSignIn" class="btn btn-primary me-2" href="login.html">Sign In</a>
+          <a class="btn btn-light-custom" href="register.html">Register</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- Hero Section -->
+
 <div class="container py-5">
   <div class="row align-items-center">
     <div class="col-md-6 mb-4 mb-md-0">
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<!-- Features Section -->
+
 <div class="container text-center py-5">
   <h2 class="fw-bold mb-3">¿Qué es CrudNote?</h2>
   <p class="mb-4">CrudNote is a collaborative note-taking app that lets you create, edit, and share notes with your team.</p>
@@ -84,6 +84,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/JS/spa.js" ></script>
+
 </body>
 </html>
