--- a/login.html
+++ b/login.html
@@ -9,25 +9,27 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+
   <nav class="navbar navbar-light bg-light px-3">
     <a class="navbar-brand" href="#">CrudNote</a>
   </nav>
 
-  <!-- Login Form -->
+  
   <div class="login-container">
     <div class="login-box">
       <h3 class="mb-4 fw-bold">Welcome back</h3>
       <form>
-        <input type="text" class="form-control" placeholder="Email or username" required>
-        <input type="password" class="form-control" placeholder="Password" required>
-        <button type="submit" class="btn btn-primary w-100">Sign In</button>
+        <input id="EmailOrUsername" type="text" class="form-control" placeholder="Email or username" required>
+        <input id="password" type="password" class="form-control" placeholder="Password" required>
+        <button id="btnSignIn" type="submit" class="btn btn-primary w-100">Sign In</button>
       </form>
       <p class="mt-3">
-        <small>Don't have an account? <a href="#">Register</a></small>
+        <small>Don't have an account? <a href="register.html">Register</a></small>
       </p>
     </div>
   </div>
+
+  <script src="assets/JS/login.js" ></script>
 
 </body>
 </html>
